Refactor: Simplified Javascript and fixed sorting errors in CI plot
Test: Adapted Observer tests
Signed-off-by: Josua Carl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -37,7 +37,7 @@ ${ assets_js.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
     // Nextflow report data
     window.data = ${data};
     window.options = ${options};
-    window.timeCiRecords = new Map(Object.entries(${timeCiRecords}));
+    window.ciRecords = ${timeCiRecords};
   </script>
 
 </head>
