Fix: Fixed spelling error
Signed-off-by: Josua Carl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -1023,7 +1023,7 @@
       <dl>
         <dt>Run times</dt>
         <dd>
-          <span id="workflow_start">08-Sep-2025 17:37:42</span> - <span id="workflow_complete">08-Sep-2025 17:37:42</span>
+          <span id="workflow_start">30-Sep-2025 10:23:17</span> - <span id="workflow_complete">30-Sep-2025 10:23:17</span>
           (<span id="completed_fromnow"></span>duration: <strong>null</strong>)
         </dd>
 
@@ -1166,7 +1166,7 @@
     <div class="container">
       <h3 id="ci-records">Carbon intensity records</h3>
       <div id="ci-plot"></div>
-      <p class="mt-3 mb-3">This plot shows the carbon intensity (CI) fluctuation during workflow computation and the energy consumption od individual tasks. Together these two factors form the emitted CO₂e.</p>
+      <p class="mt-3 mb-3">This plot shows the fluctuation of carbon intensity (CI) during workflow computation and the energy consumption of individual tasks. Together, these two factors determine the emitted CO₂e.</p>
     </div>
 
     <!-- Tasks table -->
