--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -288,7 +288,7 @@ ${ assets_js.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
     <div class="container">
       <h3 id="ci-records">Carbon intensity records</h3>
       <div id="ci-plot"></div>
-      <p class="mt-3 mb-3">This plot shows the carbon intensity (CI) fluctuation during workflow computation and the energy consumption od individual tasks. Together these two factors form the emitted CO₂e.</p>
+      <p class="mt-3 mb-3">This plot shows the fluctuation of carbon intensity (CI) during workflow computation and the energy consumption of individual tasks. Together, these two factors determine the emitted CO₂e.</p>
     </div>
 
     <!-- Tasks table -->
